# directa-api-python

./: .gitignore  README.md  pyproject.toml  setup.py  test_darwin_status.py
.github/workflows/: python-tests.yml
directa_api/: __init__.py  trading.py
examples/: simulation_example.py
tests/: test_simulation.py
